# openclaw-fleet

./: .gitignore  LICENSE  README.md
binary/: Cargo.toml
binary/src/: config.rs  fleet.rs  ipc.rs  lib.rs  main.rs  state.rs  trend.rs  triggers.rs  value_gap.rs
binary/src/ssh/: commands.rs  mod.rs  probe.rs
plugin/: openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
plugin/assets/: dashboard.html
plugin/skills/: SKILL.md
plugin/src/: index.ts  ipc-client.ts  tools.ts
registry/: commands.json
