[package]
name = "openclaw-fleet"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "SSH-based fleet monitoring for OpenClaw"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
russh = "0.50"
async-trait = "0.1"
dirs = "5"
chrono = "0.4"
